# celestsp

./: Makefile  README.md  celestsp.rb  noxfile.py  pyproject.toml
Formula/: celestsp.rb
src/celestsp/: main.py
