[project]
name = "celestsp"
version = "0.2.49"
description = "Celestial TSP is a Python script that calculates the optimal order of celestial bodies for observation based on their coordinates."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" },
]
dependencies = [
    "astropy>=7.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/rioriost/celestsp"
Issues = "https://github.com/rioriost/celestsp/issues"
Repository = "https://github.com/rioriost/celestsp"

[project.scripts]
celestsp = "celestsp.main:main"

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celestsp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/celestsp",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
